--- a/templates/items/clock_keeper-sheet.hbs
+++ b/templates/items/clock_keeper-sheet.hbs
@@ -17,7 +17,7 @@
         <label>Scene:</label>
         <select name="system.targetScene">
           {{#select system.targetScene}}
-          {{#each system.scenes}}
+          {{#each sceneOptions }}
           <option value="{{id}}">{{name}}</option>
           {{/each}}
           {{/select}}
@@ -38,7 +38,7 @@
             </th>
           </thead>
           <tbody>
-            {{#each clock_keys as |keyData keyID|}}
+            {{#each (lookup system.scenes system.targetScene) as |keyData keyID|}}
             <tr>
                 <th class="black-white">
                   {{> "systems/eunos-blades/templates/components/toggle-icon.hbs"
@@ -47,28 +47,28 @@
                     activeTooltip="<b>Key is Visible</b><br>Click to Hide"
                     inactiveClass="fas fa-eye-slash"
                     inactiveTooltip="<b>Key is Hidden</b><br>Click to Show"
-                    targetKey=(concat "system.clock_keys." keyID ".isVisible") }}
+                    targetKey=(concat "system.scenes." ../system.targetScene "." keyID ".isVisible") }}
                   {{> "systems/eunos-blades/templates/components/toggle-icon.hbs"
                     isToggled=keyData.isActive
                     activeClass="fas fa-bell"
                     activeTooltip="<b>Key is Focused</b><br>Click to Mute"
                     inactiveClass="fas fa-bell-slash"
                     inactiveTooltip="<b>Key is Muted</b><br>Click to Focus"
-                    targetKey=(concat "system.clock_keys." keyID ".isActive") }}
+                    targetKey=(concat "system.scenes." ../system.targetScene "." keyID ".isActive") }}
                   {{> "systems/eunos-blades/templates/components/toggle-icon.hbs"
                     isToggled=keyData.isNameVisible
                     activeClass="fas fa-comment"
                     activeTooltip="<b>Name is Visible</b><br>Click to Hide"
                     inactiveClass="fas fa-comment-slash"
                     inactiveTooltip="<b>Name is Hidden</b><br>Click to Show"
-                    targetKey=(concat "system.clock_keys." keyID ".isNameVisible") }}
+                    targetKey=(concat "system.scenes." ../system.targetScene "." keyID ".isNameVisible") }}
                 </th>
                 <th class="black-white">
-                  <input type="text" class="key-input key-input-display" name="system.clock_keys.{{keyID}}.display" value="{{keyData.display}}">
+                  <input type="text" class="key-input key-input-display" name="system.clock_keys.{{keyID}}.name" value="{{keyData.name}}">
                 </th>
                 <th class="black-white">
-                  <select class="key-clock-counter" data-dtype="number" data-id="{{keyID}}" name="system.clock_keys.{{keyID}}.numClocks">
-                    {{#select keyData.numClocks}}
+                  <select class="key-clock-counter" data-dtype="number" data-id="{{keyID}}" name="system.clock_keys.{{keyID}}.size">
+                    {{#select keyData.size}}
                     {{#for 1 6}}
                     <option value="{{this}}">{{this}}</option>
                     {{/for}}
@@ -85,9 +85,11 @@
                 </th>
               </tr>
 
-              {{#for 1 keyData.numClocks}}
-              {{> "systems/eunos-blades/templates/parts/clock-sheet-row.hbs" keyID=keyID keyData=keyData clockData=(lookup keyData.clocks this) clockNum=this}}
-              {{/for}}
+              {{#each keyData.clocksData as |clockData clockID|}}
+              {{> "systems/eunos-blades/templates/parts/clock-sheet-row.hbs" clockData
+                targetKeyPrefix=(concat "system.scenes." ../../system.targetScene "." ../keyID ".clocksData." clockID)
+              }}
+              {{/each}}
             </tr>
             {{/each}}
           </tbody>
